Fix background on app.component
Recover themeable background + full height main content

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -3,7 +3,7 @@
     flex-direction: column;
     min-height: 100%;
 }
-.sidenav-container {
+.main-container {
     flex: 1;
     // height: calc(100% - 64px); // 64px for each toolbar (header and footer)
 }
